# robot_trailer

./: LICENSE  README.md
divin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
divin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
divin_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
divin_ws/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
divin_ws/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
divin_ws/devel/.private/robot_trailer/: .catkin  .rosinstall  setup.sh
divin_ws/devel/.private/robot_trailer/lib/pkgconfig/: robot_trailer.pc
divin_ws/devel/.private/robot_trailer/share/robot_trailer/cmake/: robot_trailerConfig.cmake
divin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  robot_trailer.pc
divin_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
divin_ws/devel/share/robot_trailer/cmake/: robot_trailerConfig-version.cmake  robot_trailerConfig.cmake
divin_ws/src/robot_trailer/: CMakeLists.txt
divin_ws/src/robot_trailer/description/rviz/: robot_trailer.rviz
divin_ws/src/robot_trailer/description/xacro/: robot_trailer.xacro
divin_ws/src/robot_trailer/ros/launch/: test_launch.launch
divin_ws/src/robot_trailer/ros/src/: controller.py
